fix svg, finalize javking

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
-	font-family: 'Helvetica Neueu', Helvetica, Arial, sans-serif;
-	margin: 0;
-	padding: 0;
+    font-family: 'Helvetica Neueu', Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
     text-decoration: none;
     user-select: none;
     -moz-user-select: -moz-none;
@@ -14,8 +14,8 @@
 }
 
 @font-face {
-	font-family: "Lato-Regular";
-	src: url('polices/Lato-Regular.ttf');
+    font-family: "Lato-Regular";
+    src: url('polices/Lato-Regular.ttf');
 }
 
 @font-face {
@@ -24,51 +24,51 @@
 }
 
 html {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 body {
-	color: black;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	width: 100%;
-	background-color: #232830;
-	scrollbar-width: none;
+    color: black;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #232830;
+    scrollbar-width: none;
 }
 
 body::-webkit-scrollbar {
-  /* This is the magic bit for WebKit */
-  display: none;
+    /* This is the magic bit for WebKit */
+    display: none;
 }
 
 a:hover, a:focus {
-	color: inherit;
+    color: inherit;
 }
 
 @keyframes float {
-	0% {
-		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
-		transform: translatey(0px);
-	}
-	50% {
-		/* box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2); */
-		transform: translatey(-20px);
-	}
-	100% {
-		/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
-		transform: translatey(0px);
-	}
+    0% {
+        /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+        transform: translatey(0px);
+    }
+    50% {
+        /* box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2); */
+        transform: translatey(-20px);
+    }
+    100% {
+        /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+        transform: translatey(0px);
+    }
 }
 
 .bigavatar {
-	width: 300px;
+    width: 300px;
     /* border-radius: 50%; */
     /* border: 5px #FF015B solid; */
-	/* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
-	box-shadow: none;
+    /* box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6); */
+    box-shadow: none;
     transform: translatey(0px);
     display: block;
     margin: auto;
@@ -79,7 +79,7 @@ a:hover, a:focus {
 .avatarblock {
     border-radius: 50%;
     border: 5px #c6f6f6 solid;
-    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
     transform: translatey(0px);
     display: block;
     margin: auto;
@@ -93,9 +93,9 @@ a:hover, a:focus {
 }
 
 .toptext h1 {
-	color: #ddaedb;
-	font: 700 48px Times New Roman, Times, serif;
-	font-size: 50px;
+    color: #ddaedb;
+    font: 700 48px Times New Roman, Times, serif;
+    font-size: 50px;
 }
 
 .toptext h3 {
@@ -104,105 +104,90 @@ a:hover, a:focus {
 }
 
 footer {
-	bottom: 0;
-	position: relative;
-	background: rgba(255, 255, 255, .05);
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	margin-top: 100%;
+    bottom: 0;
+    position: relative;
+    background: rgba(255, 255, 255, .05);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 100%;
 }
 
-@media screen and (max-height: 800px) , screen and (max-width: 700px) {
+.mainsvg {
+    justify-content: center;
+    margin: auto;
+    align-items: center;
+}
 
-	.middle {
-		padding: 0;
-	}
-
-	.text {
-		transform: scale(1);
-	}
-
-	.bigavatar {
-		width: 250px;
+@media screen and (max-height: 800px), screen and (max-width: 700px) {
+    .middle {
+        padding: 0;
     }
-    
+    .text {
+        transform: scale(1);
+    }
+    .bigavatar {
+        width: 250px;
+    }
     .avatarblock {
         width: 150px;
     }
-
-	.toptext h1 {
-		font-size: 40px;
-	}
-
-	.icon a i {
-		font-size: 20px;
-		padding: 7px;
+    .toptext h1 {
+        font-size: 40px;
     }
-    
+    .icon a i {
+        font-size: 20px;
+        padding: 7px;
+    }
     .main-motto {
         font-size: 20px;
     }
-
 }
 
 @media screen and (max-width: 700px) {
-
-	.middle {
-		padding: 0;
-	}
-
-	.text {
-		transform: scale(1.2);
-	}
-
-	.wb_button {
-		width: 100px !important;
-		height: auto !important;
-	}
-	.bigavatar {
-		width: 230px;
+    .middle {
+        padding: 0;
     }
-    
+    .text {
+        transform: scale(1.2);
+    }
+    .wb_button {
+        width: 100px !important;
+        height: auto !important;
+    }
+    .bigavatar {
+        width: 230px;
+    }
     .avatarblock {
         width: 130px;
     }
-
-	.toptext h3 span {
-		font-size: 25px;
+    .toptext h3 span {
+        font-size: 25px;
     }
-    
     .main-motto {
         font-size: 10px;
     }
-
     .project {
         width: 100% !important;
         margin: 0 0 20px 0 !important;
     }
-
     .project-container {
         border-radius: 15px;
     }
-
     .project-image {
         width: 100% !important;
     }
-
     .project-image img {
         border-radius: 15px 15px 0 0 !important;
     }
-
     .project-text {
         width: 100% !important;
         max-height: 30% !important;
         text-align: center;
     }
-
     .project-name {
         font-size: 30px !important;
     }
-
     .project-description {
         font-size: 13px !important;
         padding: 0 0 10px;
@@ -210,56 +195,44 @@ footer {
 }
 
 @media screen and (max-width: 900px) {
-
-	.middle {
-		padding: 0;
-	}
-
-	.text {
-		transform: scale(1.5);
-	}
-
-	.top {
-		padding: 20px !important;
+    .middle {
+        padding: 0;
     }
-    
+    .text {
+        transform: scale(1.5);
+    }
+    .top {
+        padding: 20px !important;
+    }
     .main-motto {
         font-size: 10px;
     }
 }
 
 @media screen and (min-height: 1000px) {
-
     .avatarblock {
         width: 40%;
     }
-
     .project {
         width: 40% !important;
     }
-
     .project-container {
         border-radius: 15px;
     }
-
     .project-image {
         width: 100% !important;
     }
-
     .project-image img {
         border-radius: 15px 15px 0 0 !important;
     }
-
     .project-text {
         width: 100% !important;
         max-height: 30% !important;
         text-align: center;
     }
-
     .project-name {
         font-size: 40px !important;
     }
-
     .project-description {
         font-size: 18px !important;
         padding: 0 0 10px
@@ -270,28 +243,27 @@ footer {
     .project-text {
         margin: 10px !important;
     }
-
     .project-image {
         width: fit-content;
     }
 }
 
 .pink {
-	color: #FF015B;
+    color: #FF015B;
 }
 
 .blue {
-	color: #1972F5;
+    color: #1972F5;
 }
 
 footer span {
-	color: white;
-	padding: 5px;
+    color: white;
+    padding: 5px;
 }
 
 .middle {
-	padding: 20% 0 0;
-	vertical-align: middle;
+    padding: 20% 0 0;
+    vertical-align: middle;
 }
 
 .wb_button {
@@ -304,9 +276,9 @@ footer span {
     position: relative;
     width: 198px;
     height: 42px;
-    font-family: Tahoma,Geneva,sans-serif;
+    font-family: Tahoma, Geneva, sans-serif;
     font-size: 14px;
-	text-align: center;
+    text-align: center;
     border: 2px solid #ffffff;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
@@ -315,14 +287,14 @@ footer span {
     color: black;
     text-decoration: none;
     font-weight: bold;
-	transition: 0.3s;
+    transition: 0.3s;
 }
 
 .wb_button:hover {
-	background-color: rgb(65, 65, 65);
-	color: white;
-	border: 2px solid rgb(65, 65, 65);
-	border-radius: 2px;
+    background-color: rgb(65, 65, 65);
+    color: white;
+    border: 2px solid rgb(65, 65, 65);
+    border-radius: 2px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
 }
@@ -334,7 +306,7 @@ footer span {
 }
 
 .toptext {
-	text-align: center;
+    text-align: center;
 }
 
 .topbuttons {
@@ -344,67 +316,67 @@ footer span {
 }
 
 .topbuttons div {
-	padding: 5px;
+    padding: 5px;
 }
 
 .stats img {
-  display: block;
-  margin: auto;
-  width: 300px;
-  margin: -40px auto -30px auto;
-  overflow: hidden;
+    display: block;
+    margin: auto;
+    width: 300px;
+    margin: -40px auto -30px auto;
+    overflow: hidden;
 }
 
 .stats {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .haut {
-  margin: 300px;
-  color: black;
-  padding: 10px;
+    margin: 300px;
+    color: black;
+    padding: 10px;
 }
 
 .top {
-	padding: 15px;
+    padding: 15px;
 }
 
 .block {
-	display: block;
+    display: block;
 }
 
 .icon {
-	padding: 20px;
+    padding: 20px;
 }
 
 .icon a i {
-	color: white;
-	font-size: 30px;
-	padding: 10px;
+    color: white;
+    font-size: 30px;
+    padding: 10px;
     background-color: #232830;
     border-radius: 5px;
-	transition: transform 265ms ease-in-out;
+    transition: transform 265ms ease-in-out;
 }
 
 .icon a i:hover {
-	transform: scale(1.5);
+    transform: scale(1.5);
     cursor: pointer;
     background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.phone a i:hover {
-    background-color: #a4c639;
+.insta a i:hover {
+    background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background-image: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 }
 
 .email a i:hover {
     background-color: #bb001b;
-
 }
 
 .discord a i:hover {
-    background-color: rgb(125,148,221);
+    background-color: rgb(125, 148, 221);
 }
 
 .button {
@@ -426,24 +398,16 @@ footer span {
 } */
 
 .stats {
-	margin: 10px;
+    margin: 10px;
 }
 
-.mainblock {
-
-}
+.mainblock {}
 
 .text-wrapper {
     justify-content: center;
     text-align: center;
     align-items: center;
     margin: auto;
-}
-
-#profile path {
-    stroke-dasharray: 1000;
-    /* stroke-dashoffset: 0; */
-    transform: scale(.5);
 }
 
 .align-center {
@@ -483,9 +447,7 @@ footer span {
     /* letter-spacing: 0.5px; */
 }
 
-.header {
-
-}
+.header {}
 
 .container {
     display: flex;
@@ -551,14 +513,14 @@ footer span {
 
 .loading-wrapper {
     width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: #232830;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #232830;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .sk-cube-grid {
@@ -566,101 +528,114 @@ footer span {
     height: 40px;
     margin: 100px auto;
 }
-  
+
 .sk-cube-grid .sk-cube {
-  width: 33%;
-  height: 33%;
-  background-color: white;
-  float: left;
-  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
-          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+    width: 33%;
+    height: 33%;
+    background-color: white;
+    float: left;
+    -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+    animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
 }
+
 .sk-cube-grid .sk-cube1 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s; }
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
 .sk-cube-grid .sk-cube2 {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s; }
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+
 .sk-cube-grid .sk-cube3 {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s; }
+    -webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+}
+
 .sk-cube-grid .sk-cube4 {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s; }
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s;
+}
+
 .sk-cube-grid .sk-cube5 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s; }
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
 .sk-cube-grid .sk-cube6 {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s; }
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+
 .sk-cube-grid .sk-cube7 {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s; }
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+}
+
 .sk-cube-grid .sk-cube8 {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s; }
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s;
+}
+
 .sk-cube-grid .sk-cube9 {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s; }
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
 
 @-webkit-keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
-    -webkit-transform: scale3D(1, 1, 1);
-            transform: scale3D(1, 1, 1);
-  } 35% {
-    -webkit-transform: scale3D(0, 0, 1);
-            transform: scale3D(0, 0, 1); 
-  }
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    }
+    35% {
+        -webkit-transform: scale3D(0, 0, 1);
+        transform: scale3D(0, 0, 1);
+    }
 }
 
 @keyframes sk-cubeGridScaleDelay {
-  0%, 70%, 100% {
-    -webkit-transform: scale3D(1, 1, 1);
-            transform: scale3D(1, 1, 1);
-  } 35% {
-    -webkit-transform: scale3D(0, 0, 1);
-            transform: scale3D(0, 0, 1);
-  } 
+    0%, 70%, 100% {
+        -webkit-transform: scale3D(1, 1, 1);
+        transform: scale3D(1, 1, 1);
+    }
+    35% {
+        -webkit-transform: scale3D(0, 0, 1);
+        transform: scale3D(0, 0, 1);
+    }
 }
 
 #canvas {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: -5;
-	opacity: 0.1;
-	top: 0;
-	left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -5;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
 }
 
 .github-corner:hover .octo-arm {
-  animation: octocat-wave 560ms ease-in-out
+    animation: octocat-wave 560ms ease-in-out
 }
 
 @keyframes octocat-wave {
-
-  0%,
-  100% {
-    transform: rotate(0)
-  }
-
-  20%,
-  60% {
-    transform: rotate(-25deg)
-  }
-
-  40%,
-  80% {
-    transform: rotate(10deg)
-  }
+    0%, 100% {
+        transform: rotate(0)
+    }
+    20%, 60% {
+        transform: rotate(-25deg)
+    }
+    40%, 80% {
+        transform: rotate(10deg)
+    }
 }
 
 @media (max-width:500px) {
-  .github-corner:hover .octo-arm {
-    animation: none
-  }
-
-  .github-corner .octo-arm {
-    animation: octocat-wave 560ms ease-in-out
-  }
+    .github-corner:hover .octo-arm {
+        animation: none
+    }
+    .github-corner .octo-arm {
+        animation: octocat-wave 560ms ease-in-out
+    }
 }
