--- a/projects/Redeem/css/style.css
+++ b/projects/Redeem/css/style.css
@@ -16,12 +16,14 @@ div.center video {
     z-index: -5;
     top: -10%;
     left: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .container {
-    /* height: 100%; */
+    height: 100%;
+    width: 100%;
+    padding: 50px;
 }
 
 .video-container {
@@ -88,6 +90,14 @@ section div {
     padding: 40px;
     visibility: hidden;
     font-size: 2em;
+}
+
+.popup.active h2 {
+    position: absolute;
+    color: #ecec;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .popup.active {
