--- a/projects/Redeem/css/style.css
+++ b/projects/Redeem/css/style.css
@@ -5,6 +5,32 @@
     font-family: consolas;
 }
 
+#audio-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 7;
+}
+
+.mute {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    width: 90%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    font-size: 2.1em;
+    color: #000;
+}
+
 div.center {
     text-align: center;
     z-index: -5;
@@ -135,4 +161,10 @@ section div {
 
 #my-canvas.active {
     visibility: visible;
+}
+
+.break30 {
+    margin-top: 100%;
+    display: block;
+    visibility: hidden;
 }
